--- a/portofolio.html
+++ b/portofolio.html
@@ -38,11 +38,11 @@
         <!--Portofolio buttons  -->
        <section>
         <ul class="portofolio-buttons">
-           <li><button class="button" type="button">All</button></li>
-            <li><button class="button" type="button">Web Site</button></li>
-            <li><button class="button" type="button">App</button></li>
-            <li><button class="button" type="button">Design</button></li>
-            <li><button class="button" type="button">Marketing</button></li>
+           <li><button class="port-buttons" class="button" type="button">All</button></li>
+            <li><button class="port-buttons" class="button" type="button">Web Site</button></li>
+            <li><button class="port-buttons" class="button" type="button">App</button></li>
+            <li><button class="port-buttons" class="button" type="button">Design</button></li>
+            <li><button class="port-buttons" class="button" type="button">Marketing</button></li>
         </ul>
       </section>
         <!-- Portofolio images -->
