--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
   </div>
     </header >
     <main class="section">
-      <div class="container">
+      
     <!-- Section 1 -->
       <section class="hero-img">
         <h1 class="hero-heading">Effective Solutions <br> for Your Business</h1>
-        <button class="main-button" class="button" type="button">Order <br>service</button>
+        <button class="main-button" class="button" type="button">Order service</button>
+        <div class="container">
       </section>
       <!-- Section 2 -->
       <section class="section">
@@ -121,7 +122,7 @@
     </main>
      <!-- Footer -->
      <footer class="footer">
-      <div class="container">
+      <div class="container"></div>
       <nav>
         <h3>
           <a class="logo" href="WEBSTUDIO">STUDIO</a>
